--- a/styles/palete.css
+++ b/styles/palete.css
@@ -12,6 +12,7 @@
     --alter2: #291026;
     --alter3: #cec21a;
     /* --alter3: #bcce1a; */
+    --scrolltrack: #11151a;
 
     /* --back1: #14242b;
     --back2: #0c2e2b;
